--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="sign_up">SIGN UP</string>
     <string name="text_sign_in">I already have an account</string>
     <string name="welcome">Welcome to HealtCare</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
     <string name="name_surname"><![CDATA[Name & Surname]]></string>
     <string name="email_password"><![CDATA[Email & Password]]></string>
     <string name="title_activity_home">HomeActivity</string>
@@ -15,42 +15,24 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
 
     <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
 
-    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
-    <string name="title_upload_quality">Upload Quality</string>
-    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
-    <string name="pref_title_notifications">Notifications</string>
+   <string name="pref_title_notifications">Notifications</string>
     <string name="summary_choose_ringtone">Choose notification sound</string>
+
     <string name="pref_header_about">About</string>
-    <string name="summary_about">HealthCare </string>
-    <string name="app_version">1.2</string>
+    <string name="summary_about">HealthCare is an application that allow you to calculate macro nutriments in your food and take notes of your daily activity. </string>
+    <string name="app_version">Version 1.2</string>
     <string name="summary_support">Contact us by email.</string>
+    <string name="title_faq">FAQ</string>
     <string name="title_send_feedback">Send us some feedback</string>
-    <string name="url_faq">https://github.com/clemeMnt/HealtyApplication/issues</string>
     <string name="privacy_policy">Privacy Policy</string>
-    <string name="url_privacy">https://clementmarchais.fr/privacy_policy</string>
     <string name="title_terms">Terms &amp; Conditions</string>
-    <string name="url_terms">https://clementmarchais.fr/terms_conditions</string>
-    <string name="title_version">Version</string>
+
     <string name="choose_email_client">Choose email client</string>
     <string name="title_gallery_storage">Default Storage</string>
     <string name="title_new_notification_sound">Message notification</string>
@@ -81,4 +63,23 @@
     <string name="weight">Weight</string>
     <string name="_70_kg">70</string>
     <string name="_170_cm">170</string>
+    <string name="menu_home">Home</string>
+    <string name="title_notification">Notification</string>
+    <string name="text_enable_notif">Enable message notifications</string>
+    <string name="title_feedback">FeedBack</string>
+    <string name="title_vibration">Vibration</string>
+    <string name="title_sound">Sound</string>
+    <string name="mimimun_of_calories">Mimimun of calories</string>
+
+    <string name="in_vehicle">In a vehicle</string>
+    <string name="on_bicycle">On a bicycle</string>
+    <string name="on_foot">On foot</string>
+    <string name="running">Running</string>
+    <string name="still">Still</string>
+    <string name="tilting">Tilting</string>
+    <string name="unknown">Unknown activity</string>
+    <string name="walking">Walking</string>
+    <string name="percent">%1$d%%</string>
+    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>
+
 </resources>
